--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -7,3 +7,7 @@ export ZELLIJ_CONFIG_DIR="$HOME/.config/zellij"
 # https://github.com/meiji163/gh-notify?tab=readme-ov-file#key-bindings-fzf
 export GH_NOTIFY_RELOAD_KEY='ctrl-R'
 export GH_NOTIFY_MARK_READ_KEY='ctrl-r'
+
+# API Keys
+export ANTHROPIC_API_KEY={{ (onepasswordDetailsFields "claude-api-key").credential.value}}
+export OPENAI_API_KEY={{ (onepasswordDetailsFields "openai-api-key").credential.value}}
