--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -13,6 +13,7 @@ export GH_NOTIFY_MARK_READ_KEY='ctrl-r'
 # API Keys
 export ANTHROPIC_API_KEY={{ (onepasswordDetailsFields "claude-api-key").credential.value}}
 export OPENAI_API_KEY={{ (onepasswordDetailsFields "openai-api-key").credential.value}}
+export GEMINI_API_KEY={{ (onepasswordDetailsFields "gemini-api-key").credential.value}}
 export FIGMA_API_KEY={{ (onepasswordDetailsFields "figma-api-key").credential.value}}
 export GITHUB_PERSONAL_ACCESS_TOKEN={{ (onepasswordDetailsFields "GitHub Default Token").credential.value}}
 
